<resources>
    <string name="app_name">TP3</string>
    <string name="register">Inscription</string>
    <string name="name_label">Votre nom :</string>
    <string name="name">Nom</string>
    <string name="firstname_label">Votre prénom :</string>
    <string name="firstname">Prénom</string>
    <string name="age_label">Votre age :</string>
    <string name="age">Age</string>
    <string name="phone_label">Votre numéro de téléphone :</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="password_label">Votre mot de passe :</string>
    <string name="password">Mot de passe</string>
    <string name="submit">Soumettre</string>
    <string name="infos_label">Informations :</string>
    <string name="display_planning">Afficher le planning</string>
    <string name="planning">Planning</string>
    <string name="h1">8h-10h</string>
    <string name="h2">10h-12h</string>
    <string name="h3">14-16h</string>
    <string name="h4">16h-18h</string>
    <string name="update">Mettre à jour</string>
</resources>
