<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/main_layout">
        <TextView
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:textSize="30sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/nameLabel"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nameEditText"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:hint="@string/name"/>
        <TextView
                android:text="@string/firstname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/firstnameLabel"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/nameEditText"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/firstnameEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/firstnameLabel"
                android:hint="@string/firstname" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ageLabel"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/firstnameEditText"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/ageEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ageLabel"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:hint="@string/age"/>
        <TextView
                android:text="@string/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/phoneLabel"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/ageEditText"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phoneEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/phoneLabel"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:hint="@string/phone"/>
        <TextView
                android:text="@string/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/passwordLabel"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/phoneEditText"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:hint="@string/password"/>
        <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                android:backgroundTint="@color/colorSuccess" android:textColorLink="@android:color/background_light"
                android:textColor="@android:color/background_light" android:onClick="onSubmit"/>
        <Button
                android:text="@string/display_planning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                android:backgroundTint="@color/colorPrimary" android:textColor="@android:color/background_light"
                android:onClick="displayPlanning"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
