<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlanningActivity">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/planningLabel" android:layout_marginTop="16dp"
            android:id="@+id/tableLayout">

        <TableRow>
            <TextView
                    android:text="@string/h1"
                    android:textSize="15sp"
                    android:padding="2dp"/>

            <TextView
                    android:id="@+id/h1"
                    android:textSize="15sp"
                    android:padding="2dp"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:text="@string/h2"
                    android:textSize="15sp"
                    android:padding="2dp"/>

            <TextView
                    android:id="@+id/h2"
                    android:textSize="15sp"
                    android:padding="2dp"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:text="@string/h3"
                    android:textSize="15sp"
                    android:padding="2dp"/>

            <TextView
                    android:id="@+id/h3"
                    android:textSize="15sp"
                    android:padding="2dp"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:text="@string/h4"
                    android:textSize="15sp"
                    android:padding="2dp"/>

            <TextView
                    android:id="@+id/h4"
                    android:textSize="15sp"
                    android:padding="2dp"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:text="@string/planning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/planningLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" android:layout_marginTop="16dp"
            android:onClick="update"/>

</androidx.constraintlayout.widget.ConstraintLayout>
